# docker-python-tox

./: .gitignore  Dockerfile  README.md
tests/: test  test-image
tests/mock-app/: pyproject.toml  setup.py  tox.ini
tests/mock-app/mock_app/: __init__.py
tests/mock-app/tests/: test_foo.py
